--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.1.3",
     "next": "^13.5.6",
+    "nodemailer": "^6.9.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.8.0"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/node": "18.11.7",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "aos": "^2.3.4",
