--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Franmartin09.github.io/landing_page",
   "name": "ics-landing-template",
   "version": "0.1.0",
   "private": true,
@@ -6,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -18,7 +21,6 @@
     "next": "^13.5.6",
     "nodemailer": "^6.9.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "tailwind-merge": "^1.8.0"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "gh-pages": "^6.1.1",
     "next-seo": "^5.11.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
