--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://innovacore-solutions.github.io/",
+  "homepage": "https://innovacore-solutions.github.io",
   "name": "ics-landing-template",
   "version": "0.1.0",
   "private": true,
