--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^13.5.6",
     "nodemailer": "^6.9.10",
     "react": "18.2.0",
+    "resend": "^3.2.0",
     "tailwind-merge": "^1.8.0"
   },
   "devDependencies": {
